SERVER-18309 have $in{: [.., null, ..]} not use sparse indexes